--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
 	<h1>Bienvenue au PtiWiki</h1>
 	<p>Un prototype de Wiki très simple en PHP</p>
-	<p><a href="PtiWiki.php?op=read&amp;file=PageAccueil">Débuter</a></p>
+	<p><a href="PtiWiki.php?op=read&amp;file=PageAccueil">Voici un lien vers la page d'accueil</a> et voici une liste de liens vers les autres fichiers du projet: </p>
+	<ul>
+	    <li><a href="MarkDown.php">Parseur de markdown</li>
+	    <li><a href="Page.php">Fichier de classe d'une page de wiki</li>
+	    <li><a href="MarkDown.php">Patrons de génération de pages</li>
+	    <li><a href="User.php">Fichier de classe d'un utilisateur</li>
+	    <li><a href="Wiki.php">Fichier de classe d'un Wiki</li>
+	    <li><a href="config.php">Configurations</li>
+	    <li><a href="Wiki.php">Gestion de la DB</li>
+    </ul>
 </body>
 </html>
