Plus de bullshit

--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
 	    <li><a href="config.php">Configurations</a></li>
 	    <li><a href="Wiki.php">Gestion de la DB</a></li>
     </ul>
+    
+    <p>Durant ce projet, nous avons pu en apprendre beaucoup sur la façon de gérer un site comprenant des usagers et des administrateurs. Nous avons aussi appris à utiliser php qui s'est révélé assez puissant à cause de ses nombreuses fonctions préintégrées mais qui nous a aussi nuit par moment à cause de sa gestion très laxiste des erreurs.
+    </p>
+    <p>
+    Nous n'avons pas beaucoup changé la disposition par défaut du code fourni mais nous avons ajouté la possibilité d'ajouter des images dans le markdown utilisé pour écrire des pages de wiki. Cette simplicité au niveau du style nous permet de rester compatible avec les appareils mobiles tels que les téléphones intelligents.
 </body>
 </html>
