--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     Nous n'avons pas beaucoup changé le style fournis avec le code puisque nous le trouvions minimaliste et plutot adéquat pour un petit wiki.
     Cette simplicité au niveau du style nous permet de rester compatible avec les appareils mobiles tels que les téléphones intelligents.
     </p>
-    <p>Nous avons pris la liberté de remplacer le parseur de markdown fourni par le parseur libre Parsedown en raison de la propension à compiler "########################AAAAA" en "&lth24&gtAAAAA&lt/h24&gt" et à générer du html invalide (comme par exemple en mettant des titres dans des balises p). Nous avons par contre gardés le support pour les WikiWords qui sont une partie importante des fonctionalités du wiki. Nous avons également ajoutés une fonctionalité de visionnement de source qui permet à un usager de voir le code d'une page.</p>
+    <p>Nous avons pris la liberté de remplacer le parseur de markdown fourni par le parseur libre Parsedown en raison de la propension à compiler "########################AAAAA" en "&lt;h24&gtAAAAA&lt/h24&gt;" et à générer du html invalide (comme par exemple en mettant des titres dans des balises p). Nous avons par contre gardés le support pour les WikiWords qui sont une partie importante des fonctionalités du wiki. Nous avons également ajoutés une fonctionalité de visionnement de source qui permet à un usager de voir le code d'une page.</p>
 
 </body>
 </html>
