--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
 <body>
 	<h1>Bienvenue au PtiWiki</h1>
 	<p>Un prototype de Wiki très simple en PHP</p>
-	<p><a href="PtiWiki.php?op=read&amp;file=PageAccueil">Voici un lien vers la page d'accueil</a> et voici une liste de liens vers les autres fichiers du projet: </p>
+	<p><a href="PtiWiki.php?op=read&amp;file=PageAccueil">Voici un lien vers la page d'accueil</a> et voici un <a href="phpfiles.zip">lien vers une archive contenant les fichiers php du projet</a>. Dans cette archive on peut trouver ces fichiers: </p>
 	<ul>
-	    <li><a href="MarkDown.php">Parseur de markdown</a></li>
-	    <li><a href="Page.php">Fichier de classe d'une page de wiki</a></li>
-	    <li><a href="MarkDown.php">Parseur de markdown (modifié pour ne changer que les wikiwords)</a></li>
-	    <li><a href="Parsedown.php">Parseur de markdown libre téléchargé depuis github.</a> <a href="http://parsedown.org/">(site officiel)</a></li>
-	    <li><a href="User.php">Fichier de classe d'un utilisateur</a></li>
-	    <li><a href="Wiki.php">Fichier de classe d'un Wiki</a></li>
-	    <li><a href="config.php">Configurations</a></li>
-	    <li><a href="Wiki.php">Gestion de la DB</a></li>
+	    <li>Page.php: Fichier de classe d'une page de wiki</li>
+	    <li>MarkDown.php: Parseur de markdown (modifié pour ne changer que les wikiwords)</li>
+	    <li>Parsedown.php: Parseur de markdown libre téléchargé depuis github.<a href="http://parsedown.org/">(site officiel)</a></li>
+	    <li>User.php: Fichier de classe d'un utilisateur</li>
+	    <li>Wiki.php: Fichier de classe d'un Wiki</li>
+	    <li>config.php: Configurations</li>
+	    <li>Wiki.php: Gestion de la DB</li>
     </ul>
-    
+    <p>Voici aussi un lien vers la <a href="assets/css/style.css">feuille de style minimaliste.</a></p>
     <p>Durant ce projet, nous avons pu en apprendre beaucoup sur la façon de gérer un site comprenant des usagers et des administrateurs. Nous avons aussi appris à utiliser php qui s'est révélé assez puissant à cause de ses nombreuses fonctions préintégrées mais qui nous a aussi nuit par moment à cause de sa gestion très laxiste des erreurs et de l'affichage parfois difficile de code de débug.
     </p>
     <p>Durant l'élaboration du projet, nous nous sommes d'abord concentré sur l'ajout d'une base de donné permettant d'enregistrer des utilisateurs ayant des champs tels que noms d'utilisateurs, mots de passes et niveaux de permissions. Ainsi, seul un utilisateur a le droit de modifier ou de créer une page de wiki. Le champ "rank" de notre table d'utilisateur nous permet d'implanter des utilisateurs administrateurs qui peuvent voir l'historique des modifications des pages par les usagers et gérer les permissions. Ainsi, un administrateur peut donner et enlever les pouvoir d'administration à un autre usager mais aussi bannir un utilisateur qui aurait eu des comportements répréhensibles. Un utilisateur banni ne peut plus contribuer au wiki mais peut toujours en consulter les pages.</p>
