--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h1>Bienvenue au PtiWiki</h1>
+    <h2>Par Guillaume Riou et Nicolas Hurtubise</h2>
 	<p>Un prototype de Wiki très simple en PHP</p>
 	<p><a href="PtiWiki.php?op=read&amp;file=PageAccueil">Voici un lien vers la page d'accueil</a> et voici un <a href="phpfiles.zip">lien vers une archive contenant les fichiers php du projet</a>. Dans cette archive on peut trouver ces fichiers: </p>
 	<ul>
